--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 <div class="container">
 	<h1>Campground registration</h1>	
 	<form action="/campgrounds" method="POST">
@@ -15,4 +15,4 @@
 	</form>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
