--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
 	<div class="row">
@@ -31,6 +31,19 @@
 					<p>
 						<%=campground.desc%>
 					</p>
+					<p>
+						<em>- Created by <%=campground.author.username%></em>
+					</p>
+					<form class="campgroundFormButtons" action="/campgrounds/<%= campground._id %>/edit" method="GET">
+						<button class="btn btn-warning">
+							Edit
+						</button>
+					</form>
+					<form class="campgroundFormButtons" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+						<button class="btn btn-danger">
+							Delete
+						</button>
+					</form>	
 				</div>
 			</div>			
 			<div class="well">
@@ -41,7 +54,7 @@
 				<% campground.comments.forEach((comment) => { %>
 					<div class="row">
 						<div class="col-md-12">
-							<strong><%= comment.author %> </strong>
+							<strong><%= comment.author.username %> </strong>
 							<span class="pull-right">
 								10 days ago
 							</span>
@@ -56,4 +69,4 @@
 	</div>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
