--- a/views/comment/new.ejs
+++ b/views/comment/new.ejs
@@ -1,15 +1,12 @@
-<% include partials/header %>
+<% include ../partials/header %>
 <div class="container">
 	<h1>Add a comment on <%= campground.name %></h1>	
 	<form action="/campgrounds/<%=campground._id%>/comments" method="POST">
 		<div class="form-group">
 			<input type="text" placeholder="Comment" name="comment[text]" class="form-control">
-		</div>
-		<div class="form-group">
-			<input type="text" placeholder="Author" name="comment[author]" class="form-control">
-		</div>
+		</div>		
 		<input class="btn btn-primary btn-md" type="submit" value="Add Comment">
 	</form>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
